# foundry-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN-remove-features.md  PLAN.md  PLAN_AI_CONSULT.md  PLAN_ENHANCE.md  README.md  foundry-mcp.toml  pyproject.toml  pytest.ini
agents/: doc-query.md  run-tests.md  sdd-modify.md  (+5 more)
src/claude_skills/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-test.txt
src/claude_skills/.claude/: settings.local.json
src/claude_skills/claude_skills/: __init__.py
src/claude_skills/claude_skills/cli/: __init__.py  provider_runner.py
src/claude_skills/claude_skills/common/: __init__.py  ai_config.py  ai_config_setup.py  ai_tools.py  cli_utils.py  completion.py  config.py  consultation_limits.py  contracts.py  dependency_analysis.py  doc_helper.py  doc_integration.py  git_config.py  git_metadata.py  hierarchy_validation.py  integrations.py  json_output.py  metrics.py  paths.py  plain_ui.py  printer.py  progress.py  query_operations.py  reporting.py  rich_ui.py  schema_loader.py  sdd_config.py  setup_templates.py  spec.py  spec_analysis.py  tui_progress.py  ui_factory.py  ui_protocol.py  validation.py
src/claude_skills/claude_skills/context_tracker/: __init__.py  cli.py  parser.py
src/claude_skills/claude_skills/dev_tools/: README.md  __init__.py  generate_docs.py  sdd_start_helper.py  setup_project_permissions.py
src/claude_skills/claude_skills/doc_query/: __init__.py  cli.py  codebase_query.py  doc_query_lib.py  sdd_integration.py
src/claude_skills/claude_skills/llm_doc_gen/: AB_TESTING_README.md  __init__.py  ab_testing.py  ai_consultation.py  data_collector.py  detectors.py  freshness.py  main.py  markdown_validator.py  orchestrator.py  parsers.py  state_manager.py  test_detectors.py  test_parsers.py  test_state_manager.py  workflow_engine.py
src/claude_skills/claude_skills/run_tests/: __init__.py  cli.py  consultation.py  pytest_parser.py  pytest_runner.py  test_discovery.py
src/claude_skills/claude_skills/sdd_fidelity_review/: __init__.py  cli.py  consultation.py  report.py  review.py
src/claude_skills/claude_skills/sdd_next/: __init__.py  cli.py  context_utils.py  discovery.py  project.py  validation.py  workflow.py
src/claude_skills/claude_skills/sdd_plan/: __init__.py  cli.py  planner.py  templates.py
src/claude_skills/claude_skills/sdd_plan_review/: __init__.py  cli.py  prompts.py  reporting.py  reviewer.py  synthesis.py
src/claude_skills/claude_skills/sdd_pr/: __init__.py  cli.py  pr_context.py  pr_creation.py
src/claude_skills/claude_skills/sdd_render/: __init__.py  ai_prompts.py  cli.py  complexity_scorer.py  dependency_graph.py  executive_summary.py  insight_generator.py  markdown_enhancer.py  markdown_parser.py  narrative_enhancer.py  orchestrator.py  priority_ranker.py  progressive_disclosure.py  renderer.py  spec_analyzer.py  task_grouper.py  visualization_builder.py
src/claude_skills/claude_skills/sdd_spec_mod/: MODIFICATIONS_FORMAT.md  __init__.py  assumptions.py  cli.py  estimates.py  modification.py  modifications_schema.json  review_parser.py  revision.py  task_operations.py
src/claude_skills/claude_skills/sdd_update/: __init__.py  cli.py  git_commit.py  git_pr.py  journal.py  lifecycle.py  list_phases.py  list_specs.py  query.py  query_tasks.py  status.py  status_report.py  time_tracking.py  validation.py  verification.py  workflow.py
src/claude_skills/claude_skills/sdd_validate/: __init__.py  cli.py  diff.py  fix.py  formatting.py  reporting.py  stats.py
src/claude_skills/claude_skills/tests/: README.md  __init__.py  conftest.py
src/claude_skills/schemas/: documentation-schema.json
(+1119 files in other folders)
