[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-mcp"
version = "0.6.0"
description = "MCP server for SDD toolkit spec management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tyler Burleigh" }
]
keywords = ["mcp", "sdd", "specification", "spec-driven-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "mcp>=1.0.0",
    "click>=8.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "jsonschema>=4.0.0",
    "hypothesis>=6.0.0",
]
tracing = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
metrics = [
    "prometheus-client>=0.17.0",
]
observability = [
    "foundry-mcp[tracing,metrics]",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[project.scripts]
foundry-mcp = "foundry_mcp.server:main"
foundry-cli = "foundry_mcp.cli.main:cli"

[project.urls]
Homepage = "https://github.com/tylerburleigh/foundry-mcp"
Repository = "https://github.com/tylerburleigh/foundry-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry_mcp"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
