[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-skills"
version = "0.7.7"
description = "Multi-language codebase documentation and spec-driven development skills for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-html>=0.20.0",
    "tree-sitter-css>=0.20.0",
    "jedi>=0.19.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]
validation = [
    "jsonschema>=4.0.0",
]

[project.scripts]
# Unified SDD CLI - Single entry point for all SDD, doc, test, and skills-dev commands
# Usage:
#   sdd <cmd>          - SDD commands (next, update, validate, plan, review)
#   sdd doc <cmd>      - Documentation commands (generate, find-class, etc.)
#   sdd test <cmd>     - Testing commands (run, consult, discover, etc.)
#   sdd skills-dev <cmd> - Development utilities (gendocs, etc.)
sdd = "claude_skills.cli.sdd:main"

# Other tools
sdd-integration = "claude_skills.doc_query.sdd_integration:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_skills*"]

[tool.setuptools.package-data]
# Include bundled resource templates so editable installs and wheels both ship setup assets.
claude_skills = [
    "*.json",
    "**/*.json",
    "common/templates/setup/*.json",
    "*.yaml",
    "**/*.yaml",
    "common/templates/setup/*.yaml",
    "**/*.md",
    "common/templates/*.md",
]

[tool.pytest.ini_options]
# Mirror project-level pytest discovery so editable installs run the same suite.
testpaths = ["../src/claude_skills/claude_skills/tests"]
